--- a/deploy/rpm/install
+++ b/deploy/rpm/install
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/usr/bin/bash
 
 APP_ROOT=/usr/local/fw
 SYSTEMD_ROOT=/usr/lib/systemd/system
@@ -10,7 +10,6 @@ function systemd_install() {
 	if ! diff -q $app_unit $SYSTEMD_ROOT/$app.service &> /dev/null ; then
 		echo "install $SYSTEMD_ROOT/$app.service, please start it manual by 'systemctl start $app'"
 		cp -f $app_unit $SYSTEMD_ROOT/
-		mkdir -p $APP_ROOT/bin/
 		systemctl enable --force $app.service
 		systemctl daemon-reload
 	fi
